--- a/app/views/mycases/_mycase.html.erb
+++ b/app/views/mycases/_mycase.html.erb
@@ -4,7 +4,7 @@
             <%= check_box_tag "mycase_ids[]", mycase.id, false, {class: 'checkboxes form-check-input', data: { 'select-all_target': 'checkbox', action: "change->selectall#toggleParent"}, form: :bulk_form } %>
             <%=tag.label class: 'form-check-label' do %><%= tag.b( mycase.id ) %><% end %>
         <% end %>
-        <%=tag.div( "Дата: #{mycase.created_at.strftime('%d/%m/%Y %H:%M')}", class: "fs-8") %>
+        <%=tag.div( mycase.created_at.strftime('%d/%m/%Y %H:%M'), class: "fs-8") %>
     <% end %>
     <%= tag.div class: "col-2 d-flex flex-column" do %>
         <%=tag.div( mycase.status_title, class: '') %>
