--- a/app/views/clients/_show.html.erb
+++ b/app/views/clients/_show.html.erb
@@ -29,7 +29,7 @@
         </tr>
       </thead>
       <tbody>
-      <% @favorite_products.each do |pr| %>
+        <% @favorite_products.each do |pr| %>
         <tr class="align-middle">
           <td><%=pr.insid%></td>
           <%= td_tag_image(pr.image_link)%>
@@ -50,7 +50,7 @@
     </div>
     <div class="table-responsive">
     <table class="table table-hover table-condensed table-sm">
-      <thead class="thead-light">
+      <thead>
       <tr class="align-middle">
         <th># ins</th>
         <th></th>
@@ -84,6 +84,7 @@
     </div>
   </div>
 <% end %>
+
 <% if @client.preorders.present? %>
   <div class="row align-items-center mt-3 mb-3">
     <div class="col-4 d-flex w-100 align-items-center mb-2 h5">
@@ -91,7 +92,7 @@
     </div>
     <div class="table-responsive">
     <table class="table table-hover table-condensed table-sm">
-      <thead class="thead-light">
+      <thead>
         <tr class="align-middle">
           <th># ins</th>
           <th></th>
