--- a/app/views/products/_show.html.erb
+++ b/app/views/products/_show.html.erb
@@ -58,7 +58,7 @@
   </div>
 <% end %>
 
-<% if @client.restocks.present? %>
+<% if @product.restocks.present? %>
   <div class="row align-items-center mt-3 mb-3">
     <div class="col-4 d-flex w-100 align-items-center mb-2 h5">
     <span><%= reload_icon%> Сообщить о поступлении</span>
@@ -94,7 +94,7 @@
   </div>
 <% end %>
 
-<% if @client.preorders.present? %>
+<% if @product.preorders.present? %>
   <div class="row align-items-center mt-3 mb-3">
     <div class="col-4 d-flex w-100 align-items-center mb-2 h5">
     <span><%= bell_icon%> Предзаказ</span>
