change abandoned service

--- a/app/views/templates/_liquid_help.html.erb
+++ b/app/views/templates/_liquid_help.html.erb
@@ -74,16 +74,16 @@
 </ul>
 <span class="">Заявка</span>
 <ul class="list-group list-group-horizontal">
-    <li class="list-group-item">{{case.id}}</li>
-    <li class="list-group-item">{{case.status}}</li>
+    <li class="list-group-item">{{mycase.id}}</li>
+    <li class="list-group-item">{{mycase.status}}</li>
 </ul>
 <ul class="list-group list-group-horizontal">
-    <li class="list-group-item">{{case.items}}</li>
-    <li class="list-group-item">{{ case.created_at }}</li>
+    <li class="list-group-item">{{mycase.items}}</li>
+    <li class="list-group-item">{{ mycase.created_at }}</li>
 </ul>
 <ul class="list-group list-group-horizontal">
-    <li class="list-group-item">{{ case.casetype }}</li>
-    <li class="list-group-item">{{ case.number }}</li>
+    <li class="list-group-item">{{ mycase.casetype }}</li>
+    <li class="list-group-item">{{ mycase.number }}</li>
 </ul>
 </div>
 
