--- a/app/views/templates/_preview_case.html.erb
+++ b/app/views/templates/_preview_case.html.erb
@@ -2,7 +2,7 @@
 <% content_template = Liquid::Template.parse(@template.content) %>
 
 <% client_drop = Drops::Client.new(@client) %>
-<% case_drop = Drops::Case.new(@case) %>
+<% case_drop = Drops::Mycase.new(@case) %>
 <% user_drop = Drops::User.new(current_user) %>
 
 
