change restock service

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -32,6 +32,7 @@
         <%=tag.th heart_icon, title: 'Избранное' %>
         <%=tag.th reload_icon, title: 'Сообщить о поступлении' %>
         <%=tag.th bell_icon, title: 'Предзаказ' %>
+        <%=tag.th cart_icon, title: 'Корзина' %>
         <th colspan="1"></th>
       </tr>
     </thead>
