--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,8 +28,9 @@
       <tr class="bg-success mt-0">
         <th>Clients</th>
         <th>Products</th>
-        <%=tag.th heart_icon, title: 'Favorites' %>
-        <%=tag.th reload_icon, title: 'Restock' %>
+        <%=tag.th heart_icon, title: 'Избранное' %>
+        <%=tag.th reload_icon, title: 'Сообщить о поступлении' %>
+        <%=tag.th bell_icon, title: 'Предзаказ' %>
       </tr>
     </thead>
     <tbody class="align-middle">
