--- a/app/views/mycases/_form.html.erb
+++ b/app/views/mycases/_form.html.erb
@@ -3,7 +3,7 @@
 <%= simple_form_for(@mycase) do |f| %>
   <%= render 'shared/errors', object: @mycase%>
 
-  <div class="row gap-5">
+  <div class="row">
     <div class="col-4">
       <%= f.input :status, collection: Mycase::STATUS, input_html: {class: "form-select" }, disabled: true if @mycase.casetype == 'restock' || @mycase.casetype == 'preorder' %>
       <%= f.input :number, disabled: true %>
@@ -12,36 +12,35 @@
       <%= f.input :insales_custom_status_title, label: "Статус Ins", disabled: true %>
       <%= f.input :insales_financial_status, label: "Фин Статус", disabled: true %>
     </div>
-    <div class="col-8">
-    <div class="table-responsive">
-      <div class="label">Позиции заявки</div>
-      <table class="table table-primary" id="line-table">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Название товара</th>
-            <th>Вариант</th>
-            <th>Кол-во</th>
-            <th>Цена</th>
-            <%= tag.th 'Статус позиции' if @mycase.casetype == 'restock' %>
-          </tr>
-        </thead>
-        <tbody>
-          <% @mycase.lines.each do |line|%>
-            <tr class="line_<%= line.id%>">
-            <td><img src="<%= line.product.image_link %>" style="width:100px;"/></td>
-              <td><%= line.product.title %></td>
-              <td><%= link_to "#{line.variant.insid.to_s }", "http://"+current_user.insints.first.subdomen+"/product_by_id/"+line.variant.product.insid.to_s+"?variant_id="+line.variant.insid.to_s, target: "_blank" %>
-                  <br>Артикул: <%= line.variant.sku.to_s  %></td>
-              <td><%= line.quantity %></td>
-              <td><%= line.price %></td>
-              <%= tag.td line.variant.restocks.first.status if @mycase.casetype == 'restock'%>
+    <div class="col-8 ps-3">
+      <div class="table-responsive">
+        <div class="label">Позиции заявки</div>
+        <table class="table table-primary" id="line-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Название товара</th>
+              <th>Вариант</th>
+              <th>Кол-во</th>
+              <th>Цена</th>
+              <%= tag.th 'Статус позиции' if @mycase.casetype == 'restock' %>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    
+          </thead>
+          <tbody>
+            <% @mycase.lines.each do |line|%>
+              <tr class="line_<%= line.id%>">
+              <td><img src="<%= line.product.image_link %>" style="width:100px;"/></td>
+                <td><%= line.product.title %></td>
+                <td><%= link_to "#{line.variant.insid.to_s }", "http://"+current_user.insints.first.subdomen+"/product_by_id/"+line.variant.product.insid.to_s+"?variant_id="+line.variant.insid.to_s, target: "_blank" %>
+                    <br>Артикул: <%= line.variant.sku.to_s  %></td>
+                <td><%= line.quantity %></td>
+                <td><%= line.price %></td>
+                <%= tag.td line.variant.restocks.first.status if @mycase.casetype == 'restock'%>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
   <div class="row">
