--- a/app/views/mycases/index.html.erb
+++ b/app/views/mycases/index.html.erb
@@ -5,15 +5,14 @@
   </div>
 
   <div class="col px-0">
-    <%= search_form_for @search, {class: 'form-inline px-0'} do |f| %>
-        <%= f.search_field :created_at_datebegin, type: :date, placeholder: 'создан от', class: "form-control", autocomplete: "off", data: { controller: '' }, style: "max-width: 180px;" %>
-        <%= f.select :status_eq , Mycase::STATUS, { :prompt => 'Статус'}, class: "form-select", style: "max-width: 180px;" %>
-        <%= f.search_field :number_eq , placeholder: 'number', class: "form-control", style: "max-width: 180px;" %>
-        <%= f.search_field :client_name_or_client_surname_or_client_email_cont , placeholder: 'client fio, email', class: "form-control", style: "max-width: 180px;" %>
-        <%= f.select :casetype_in, Mycase::CASETYPE, { :prompt => 'Тип заявки'}, class: "form-select", style: "max-width: 180px;" %>
+    <%= search_form_for @search, {class: 'input-group px-0'} do |f| %>
+        <%= f.search_field :created_at_datebegin, type: :date, placeholder: 'создан от', class: "form-control", autocomplete: "off", data: { controller: '' } %>
+        <%= f.select :status_eq , Mycase::STATUS, { :prompt => 'Статус'}, class: "form-select" %>
+        <%= f.search_field :number_eq , placeholder: 'number', class: "form-control" %>
+        <%= f.search_field :client_name_or_client_surname_or_client_email_cont , placeholder: 'client fio, email', class: "form-control" %>
+        <%= f.select :casetype_in, Mycase::CASETYPE, { :prompt => 'Тип заявки'}, class: "form-select" %>
         <%= button_tag(type: 'submit', :class => "btn btn-outline-primary") do %><%= search_icon %><% end %>
         <%= link_to arrow_clockwise_icon, mycases_path, class: 'btn btn-outline-dark d-flex justify-content-center align-items-center' %>
-      </div>
     <% end %>
   </div>
 </div>
@@ -21,18 +20,18 @@
 
 <div id="datatables-cases_wrapper">
   <div class="col-12 list-group list-group-striped" data-controller="select-all">
-  <div class="row py-2 px-0 justify-content-start align-items-center">
-    <%= div_check_box_tag_all %>
-    <%= tag.div( 'Статус', class: 'col-2 fw-semibold' )%>
-    <%= tag.div( 'Тип заявки', class: 'col-2 fw-semibold' )%>
-    <%= tag.div( 'Клиент', class: 'col-4 fw-semibold' )%>
-    <%= tag.div( 'Сумма', class: 'col-1 fw-semibold' )%>
-    <%= tag.div('', class: 'col fw-semibold')%>
-  </div>
-  <%= turbo_stream_from [Apartment::Tenant.current, :mycases] %>
-  <%= turbo_frame_tag [Apartment::Tenant.current, :mycases], data: { } do %>
-    <%= render @mycases %>
-  <% end %>
+    <div class="row py-2 px-0 justify-content-start align-items-center">
+      <%= div_check_box_tag_all %>
+      <%= tag.div( 'Статус', class: 'col-2 fw-semibold' )%>
+      <%= tag.div( 'Тип заявки', class: 'col-2 fw-semibold' )%>
+      <%= tag.div( 'Клиент', class: 'col-4 fw-semibold' )%>
+      <%= tag.div( 'Сумма', class: 'col-1 fw-semibold' )%>
+      <%= tag.div('', class: 'col fw-semibold')%>
+    </div>
+    <%= turbo_stream_from [Apartment::Tenant.current, :mycases] %>
+    <%= turbo_frame_tag [Apartment::Tenant.current, :mycases], data: { } do %>
+      <%= render @mycases %>
+    <% end %>
   </div>
 </div>
 
