--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
         <th rowspan="2">#</th>
         <th rowspan="2">Пользователь</th>
         <th rowspan="2">Настройки</th>
-        <th colspan="4">Всего</th>
+        <th colspan="6">Всего</th>
         <th rowspan="2">Состояние</th>
         <th rowspan="2"></th>
       </tr>
@@ -31,6 +31,7 @@
         <%=tag.th heart_icon, title: 'Избранное' %>
         <%=tag.th reload_icon, title: 'Сообщить о поступлении' %>
         <%=tag.th bell_icon, title: 'Предзаказ' %>
+        <%=tag.th cart_icon, title: 'Корзина' %>
       </tr>
     </thead>
     <tbody class="align-middle">
