--- a/app/views/clients/_show.html.erb
+++ b/app/views/clients/_show.html.erb
@@ -126,3 +126,45 @@
     </div>
   </div>
 <% end %>
+
+<% if @client.abandoned_carts.present? %>
+  <div class="row align-items-center mt-3 mb-3">
+    <div class="col-4 d-flex w-100 align-items-center mb-2 h5">
+    <span><%= cart_icon%> Корзина</span>
+    </div>
+    <div class="table-responsive">
+    <table class="table table-hover table-condensed table-sm">
+      <thead>
+        <tr class="align-middle">
+          <th># ins</th>
+          <th></th>
+          <th>Название</th>
+          <th>Sku</th>
+          <th>Остаток</th>
+          <th>Цена</th>
+          <th>Статус</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @client.abandoned_carts.each do |res| %>
+        <% var = res.variant%>
+        <tr class="align-middle">
+          <td>
+            <div class="d-flex flex-column">
+              <%=tag.div var.product.insid %>
+              <%=tag.div( var.insid, class: 'opacity-75 fs-8')%>
+            </div>          
+          </td>
+          <%= td_tag_image(var.product.image_link)%>
+          <td><%= link_to "#{var.product.title}", "http://"+current_user.insints.first.subdomen+"/product_by_id/"+var.product.insid.to_s+"?variant_id="+var.insid.to_s, target: "_blank" %></td>
+          <td><%= var.sku %></td>
+          <td><%= var.quantity %></td>
+          <td><%= var.price %></td>
+          <td><%= res.status %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    </div>
+  </div>
+<% end %>
