--- a/app/views/products/_show.html.erb
+++ b/app/views/products/_show.html.erb
@@ -129,3 +129,39 @@
     </div>
   </div>
 <% end %>
+
+<% if @product.abandoned_carts.present? %>
+  <div class="row align-items-center mt-3 mb-3">
+    <div class="col-4 d-flex w-100 align-items-center mb-2 h5">
+    <span><%= cart_icon%> Корзина</span>
+    </div>
+    <div class="table-responsive">
+    <table class="table table-hover table-condensed table-sm">
+      <thead>
+        <tr class="align-middle">
+          <th>Клиент</th>
+          <th>Дата добавления</th>
+          <th>Вариант</th>
+          <th>Статус</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @product.abandoned_carts.order(:created_at).each do |preor| %>
+        <tr class="align-middle">
+          <td><%= preor.client.fio %></td>
+          <td><%= preor.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></td>
+          <td>
+            <div class="d-flex flex-column">
+              <span><%= preor.variant.sku %></span>
+              <span class="fs-8"><%= preor.variant.insid %></span>
+            </div>
+          </td>
+          <td><%= preor.status %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    </div>
+  </div>
+<% end %>
