--- a/app/views/email_setups/index.html.erb
+++ b/app/views/email_setups/index.html.erb
@@ -31,7 +31,8 @@
         <td><%= email_setup.user_password %></td>
         <td><%= email_setup.tls %></td>
         <td><%= link_to edit_icon, edit_email_setup_path(email_setup) %></td>
-        <td><%= link_to trash_icon, email_setup, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to trash_icon, email_setup, data: { "turbo-method": :delete, 'turbo-confirm': 'Are you sure?' }, class:"" %>
+        </td>
       </tr>
     <% end %>
   </tbody>
