update restock service

--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -22,21 +22,19 @@
         <% check_receiver = f.object.receiver %>
         <% input_class = check_receiver == "client" ? "col-12 mt-4 form-control d-none" : "col-12 mt-4 form-control" %>
         <label for="" class="me-3">Получатель:</label>
-        <input type="radio" class="btn-check" 
-                            name="receiver-options" 
+        <input type="radio" class="btn-check" name="receiver-options" 
                             id="manager-outlined" autocomplete="off"
                             <% if check_receiver != "client"%>checked<% end %> 
                             value="manager">
         <label class="btn btn-outline-success" for="manager-outlined">Менеджер</label>
 
-        <input type="radio" class="btn-check" 
-                            name="receiver-options" 
+        <input type="radio" class="btn-check" name="receiver-options" 
                             id="client-outlined" autocomplete="off" 
                             <% if check_receiver == "client"%>checked<% end %> 
                             value="client">
         <label class="btn btn-outline-success" for="client-outlined">Клиент</label>
       </div>
-      <%=f.input :receiver, label: false, input_html: { class: input_class, value: @validate_receiver.present? ? @validate_receiver : check_receiver, placeholder: "адреса менеджеров через запятую", autocomplete: "off"}%>
+      <%= f.input :receiver, label: false, input_html: { class: input_class, value: @validate_receiver.present? ? @validate_receiver : check_receiver, placeholder: "адреса менеджеров через запятую", autocomplete: "off"}%>
       <%# f.input :receiver, label: "Получатель", collection: [['Клиент','client'],['Менеджер','manager']], prompt: false, input_html: { class: "form-select" }, wrapper_html: {class: "col-6"} %>
       
       <%= f.input :subject, label: "Тема письма", input_html: {value: @validate_subject.present? ? @validate_subject : f.object.subject}, wrapper_html: {class: "mt-4"} %>
@@ -48,7 +46,7 @@
      
     <% end %>
      </div>
-    <div class="col-6">
+    <div class="col-6 ps-3">
     <% if Insint.work?%>
       <% if !@template.new_record? %>
         <div class="h6">Заказ инсалес и данные из инсалес</div>
@@ -90,10 +88,10 @@
           <%#<div id="restock-preview"></div>%>
         </div>
       <% else %>
-      Сохраните шаблон и появится Предпросмотр
+        Сохраните шаблон и появится Предпросмотр
       <% end %> 
       <%else%>
-      Не настроена интеграция Insales. Предпросмотр не работает
+        Не настроена интеграция Insales. Предпросмотр не работает
       <% end %>
     </div>
     </div>
