change mycases view

--- a/app/views/mycases/index.html.erb
+++ b/app/views/mycases/index.html.erb
@@ -2,7 +2,9 @@
   <div class="col-2 d-flex flex-column">
     <div class="h3">Заявки</div>
     <div class="h6">Всего - <%= Mycase.count%></div>
-    <%=tag.div( page_entries_info @mycases, class: 'h6') if @search %>
+    <%=tag.div( class: 'h6') do %>
+      <%= page_entries_info @mycases %>
+    <%end if @search.present? %>
   </div>
 
   <div class="col px-0">
