change mycases view

--- a/app/views/clients/_show.html.erb
+++ b/app/views/clients/_show.html.erb
@@ -59,6 +59,7 @@
         <th>Остаток</th>
         <th>Цена</th>
         <th>Статус</th>
+        <th>Даты</th>
       </tr>
       </thead>
       <tbody>
@@ -71,12 +72,15 @@
               <%=tag.div( var.insid, class: 'opacity-75 fs-8')%>
             </div>          
           </td>
+          <td><%= var.sku %></td>
           <%= td_tag_image(var.product.image_link)%>
           <td><%= link_to "#{var.product.title}", "http://"+current_user.insints.first.subdomen+"/product_by_id/"+var.product.insid.to_s+"?variant_id="+var.insid.to_s, target: "_blank" %></td>
           <td><%= var.sku %></td>
           <td><%= var.quantity %></td>
           <td><%= var.price %></td>
           <td><%= res.status %></td>
+          <td>Созд: <%= res.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
+          Обн: <%= res.updated_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></td>
         </tr>
         <% end %>
       </tbody>
@@ -101,6 +105,7 @@
           <th>Остаток</th>
           <th>Цена</th>
           <th>Статус</th>
+          <th>Даты</th>
         </tr>
       </thead>
       <tbody>
@@ -119,6 +124,8 @@
           <td><%= var.quantity %></td>
           <td><%= var.price %></td>
           <td><%= res.status %></td>
+          <td>Созд: <%= res.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
+          Обн: <%= res.updated_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></td>
         </tr>
         <% end %>
       </tbody>
@@ -143,6 +150,7 @@
           <th>Остаток</th>
           <th>Цена</th>
           <th>Статус</th>
+          <th>Даты</th>
         </tr>
       </thead>
       <tbody>
@@ -161,6 +169,8 @@
           <td><%= var.quantity %></td>
           <td><%= var.price %></td>
           <td><%= res.status %></td>
+          <td>Созд: <%= res.created_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></br>
+          Обн: <%= res.updated_at.in_time_zone.strftime('%d/%m/%Y %H:%M') %></td>
         </tr>
         <% end %>
       </tbody>
