--- a/app/views/products/show.turbo_stream.erb
+++ b/app/views/products/show.turbo_stream.erb
@@ -2,7 +2,7 @@
 
 <div class="offcanvas offcanvas-end offcanvas_product w-50" tabindex="-1" id="offcanvasWrap" aria-labelledby="offcanvasRightLabel" 
     data-bs-scroll="true" data-controller="offcanvas" data-action="turbo:frame-load->offcanvas#show turbo:submit-end->offcanvas#hide">
-  <div class="offcanvas-header pb-0">
+  <div class="offcanvas-header pb-0 pt-2">
     <h5 class="offcanvas-title" id="offcanvasRightLabel"></h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
